// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline empty with single root transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;

exports[`Pipeline with custom ptransform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_10",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_7",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_11",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_11",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_5",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_5",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_test_2",
            "ref_AppliedPTransform_custom transform_6",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform/nested subtransform 1_9",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_8",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform/nested subtransform 1",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_6",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "spec": Object {
            "payload": "function (pcoll) {
                return pcoll.apply({ transform: new index_1.ParDo({ doFn: new index_1.DoFn(), pipeline: p }), label: \\"nested subtransform 1\\" });
            }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform/nested subtransform 1_9",
          ],
          "uniqueName": "custom transform",
        },
      ],
      Array [
        "ref_AppliedPTransform_test_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_5",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "test",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;

exports[`Pipeline with multiple subtransforms 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_10",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_13",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_16",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_7",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_11",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_11",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_14",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_14",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_17",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_17",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_5",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_5",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_8",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_8",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_A_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_5",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "A",
        },
      ],
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_A_2",
            "ref_AppliedPTransform_B-1_6",
            "ref_AppliedPTransform_C-1_9",
            "ref_AppliedPTransform_B-2_12",
            "ref_AppliedPTransform_C-2_15",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_B-1_6",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_5",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "B-1",
        },
      ],
      Array [
        "ref_AppliedPTransform_B-2_12",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_5",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_14",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "B-2",
        },
      ],
      Array [
        "ref_AppliedPTransform_C-1_9",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "C-1",
        },
      ],
      Array [
        "ref_AppliedPTransform_C-2_15",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_14",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_17",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "C-2",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;

exports[`Pipeline with one transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_5",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_5",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom label_2",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom label_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_5",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:javascript:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom label",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;
